[metadata]
name = streamlit_cas
version = 0.0.1-snapshot
author = 'Jeanette Bewersdorff, Yuning Ding, Marius Hamacher, Torsten Zesch'
author_email = 'jeanette.bewersdorf@fernuni-hagen.de, yuning.ding@fernuni-hagen.de, marius.hamacher@outlook.de, torsten.zesch@fernuni-hagen.de'
description = A plugin to visualise UIMA CAS objects in Streamlit Apps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/catalpa-cl/cas-streamlit-visualizer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    wheel
    dkpro_cassis==0.7.1
    numpy==1.21.6
    pandas==1.3.5
    streamlit==1.22.0
    altair==4.2.2
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
exclude =
    tests
